--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
     <nav>
-        <a href="/index">Inicio</a>
+        <a href="/">Inicio</a>
         <a href="/registro">Registrate</a>
         <a href="/login">Acceder</a>
         <a href="/producto">Chocolates</a>
