intento de mierda lpmqlp

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -15,7 +15,7 @@
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">Basado en tu última visita</h2>
+				<h2 class="products-title">PRODUCTOS</h2>
 			</div>
 			<!-- Show the "visited" products -->
 			<% visited.forEach(function(product){ 
