--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -14,12 +14,12 @@
     <div class="fotoalmedio">
         <h2 text-align="center">¿Que te tentó?</h2>
         <br>
-        <a href="producto"><img text-align="center" src="/images/P1110019.jpg" alt="" height="75%" width="75%"></a>
-        <a href="productostortas"><img text-align="center" src="/images/fotoProductoPagInicio.jpeg" alt="" height="75%"
+        <a href="products"><img text-align="center" src="/images/P1110019.jpg" alt="" height="75%" width="75%"></a>
+        <a href="productostortas.ejs"><img text-align="center" src="/images/fotoProductoPagInicio.jpeg" alt="" height="75%"
                 width="75%"></a>
     </div>
 </body>
 
 <%- include('partials/footer.ejs') %>
 
-</html>
+</html>src/views/producto.ejs
