--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -11,7 +11,7 @@
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">Todos los productos</h2>
+				<h2 class="products-title">Todos los chocolates</h2>
 			</div>
 
 			<% products.forEach(function(product){ 
@@ -24,9 +24,9 @@
 								<img src="/images/products/<%= product.image %>" alt="imagen de producto">
 							</figure>
 							<article class="product-box_data">
-								<h2><%= toThousand(finalPrice) %></h2>
+								<h2><%= product.name %></h2>
 								<span><%= product.discount %> %OFF</span>
-								<p><%= product.name %></p>
+								<p><%=  toThousand(finalPrice)%></p>
 								<i class="fas fa-truck"></i>
 							</article>
 						</a>
