--- a/src/views/descproducto.ejs
+++ b/src/views/descproducto.ejs
@@ -9,7 +9,7 @@
     <h6>
         Mousse de MIX de Chocolates
     </h6><br>
-    <div style="display:inline-block;vertical-align:text-top;"><img src="images/fotoProducto1.jpg" alt="chocolate"
+    <div style="display:inline-block;vertical-align:text-top;"><img src="images/products/fotoProducto1.jpg" alt="chocolate"
             class="imagenprod"><br><br>
             <div class="contenedor-prod.">
         <p class="preciop">$6.770</p>
