--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -8,14 +8,14 @@
     <h3>Inicio</h3><br><br>
 
     <div class="fotoalmedio">
-        <img primerafoto text-align="center" src="/images/P1100984.jpg" alt="" height="75%" width="75%">
+        <img primerafoto text-align="center" src="/images/products/P1100984.jpg" alt="" height="75%" width="75%">
     </div>
     <br>
     <div class="fotoalmedio">
         <h2 text-align="center">¿Que te tentó?</h2>
         <br>
-        <a href="products"><img text-align="center" src="/images/P1110019.jpg" alt="" height="75%" width="75%"></a>
-        <a href="productostortas.ejs"><img text-align="center" src="/images/fotoProductoPagInicio.jpeg" alt="" height="75%"
+        <a href="products"><img text-align="center" src="/images/products/P1110019.jpg" alt="" height="75%" width="75%"></a>
+        <a href="productostortas.ejs"><img text-align="center" src="/images/products/fotoProductoPagInicio.jpeg" alt="" height="75%"
                 width="75%"></a>
     </div>
 </body>
