--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -2,11 +2,11 @@
     <div class="redessociales">
 
         <a href="https://www.facebook.com/tento.chocolates" target="_blank"><img primerafoto text-align="center"
-                src="/images/facebook.png" alt="" height="25px" width="25px"></a>
+                src="/images/products/facebook.png" alt="" height="25px" width="25px"></a>
         <a href="https://www.instagram.com/tento.chocolates/" target="_blank"><img primerafoto text-align="center"
-                src="/images/instagram.png" alt="" height="25px" width="25px"></a>
+                src="/images/products/instagram.png" alt="" height="25px" width="25px"></a>
         <a href="https://api.whatsapp.com/send?phone=541131663482" target="_blank"><img primerafoto text-align="center"
-                src="/images/whatsapp.png" alt="" height="25px" width="25px"></a>
+                src="/images/products/whatsapp.png" alt="" height="25px" width="25px"></a>
     </div>
     <section>
         <p class="footer2">Politica de calidad</p>
