--- a/src/views/producto.ejs
+++ b/src/views/producto.ejs
@@ -10,7 +10,7 @@
 
     <div class="contenedor">
         <div class="producto-chocolate">
-            <img class="images-row" src="images\chocolate1.JPG" alt="photos">
+            <img class="images-row" src="images\products/chocolate1.JPG" alt="photos">
             <article>Bombones Dulce de Leche</article>
             <h3 class="h3-producto">$2.500</h3>
             <i class="fa-solid fa-basket-shopping"></i>
@@ -20,7 +20,7 @@
         </div>
 
         <div class="producto-chocolate">
-            <img class="images-row" src="images\chocolate2.JPG" alt="photos">
+            <img class="images-row" src="images\products/chocolate2.JPG" alt="photos">
             <article>Bombones surtidos</article>
             <h3 class="h3-producto">$2.850</h3>
             <i class="fa-solid fa-basket-shopping"></i>
@@ -31,7 +31,7 @@
 
 
         <div class="producto-chocolate">
-            <img class="images-row" src="images\chocolate3.JPG" alt="photos">
+            <img class="images-row" src="images\products/chocolate3.JPG" alt="photos">
             <article>Bombones Macizos</article>
             <h3 class="h3-producto">$2.000</h3>
             <i class="fa-solid fa-basket-shopping"></i>
@@ -41,7 +41,7 @@
         </div>
 
         <div class="producto-chocolate">
-            <img class="images-row" src="images\alineateche.jpg" alt="photos">
+            <img class="images-row" src="images\products/alineateche.jpg" alt="photos">
             <article>Surtido de Bombones</article>
             <h3 class="h3-producto">$1.500</h3>
             <i class="fa-solid fa-basket-shopping"></i>
@@ -51,7 +51,7 @@
         </div>
 
         <div class="producto-chocolate">
-            <img class="images-row" src="images\chocolate6.JPG" alt="photos">
+            <img class="images-row" src="images\products/chocolate6.JPG" alt="photos">
             <article>Bombones Rellenos</article>
             <h3 class="h3-producto">$1.100</h3>
             <i class="fa-solid fa-basket-shopping"></i>
@@ -61,7 +61,7 @@
         </div>
 
         <div class="producto-chocolate">
-            <img class="images-row" src="images\confite2.JPG" alt="photos">
+            <img class="images-row" src="images\products/confite2.JPG" alt="photos">
             <article>Pasas de Uva con Chocolate</article>
             <h3 class="h3-producto">$800</h3>
             <i class="fa-solid fa-basket-shopping"></i>
@@ -71,7 +71,7 @@
         </div>
 
         <div class="producto-chocolate">
-            <img class="images-row" src="images\confite3.JPG" alt="photos">
+            <img class="images-row" src="images\products/confite3.JPG" alt="photos">
             <article>Almendras con Chocolate</article>
             <h3 class="h3-producto">$1.200</h3>
             <i class="fa-solid fa-basket-shopping"></i>
@@ -81,7 +81,7 @@
         </div>
 
         <div class="producto-chocolate">
-            <img class="images-row" src="images\confite4.JPG" alt="photos">
+            <img class="images-row" src="images\products/confite4.JPG" alt="photos">
             <article>Mani con Chocolate</article>
             <h3 class="h3-producto">$800</h3>
             <i class="fa-solid fa-basket-shopping"></i>
