--- a/src/views/productostortas.ejs
+++ b/src/views/productostortas.ejs
@@ -11,7 +11,7 @@
 
     <div class="contenedor">
         <div class="producto-chocolate">
-            <img class="images-row" src="images/fotoProducto4.jpg" alt="photos">
+            <img class="images-row" src="images/products/fotoProducto4.jpg" alt="photos">
             <article>Torta Decorada con Macarones</article>
             <h3 class="h3-producto">$8.000</h3>
             <i class="fa-solid fa-basket-shopping"></i>
@@ -21,7 +21,7 @@
         </div>aqAQA
 
         <div class="producto-chocolate">
-            <img class="images-row" src="images/fotoProducto11.jpg" alt="photos">
+            <img class="images-row" src="images/products/fotoProducto11.jpg" alt="photos">
             <article>Torta Decorada Personalizada</article>
             <h3 class="h3-producto">$8.000</h3>
             <i class="fa-solid fa-basket-shopping"></i>
@@ -31,7 +31,7 @@
         </div>
 
         <div class="producto-chocolate">
-            <img class="images-row" src="images/fotoProducto17.jpeg" alt="photos">
+            <img class="images-row" src="images/products/fotoProducto17.jpeg" alt="photos">
             <article>Torta decorada para Casamiento</article>
             <h3 class="h3-producto">$10.000</h3>
             <i class="fa-solid fa-basket-shopping"></i>
@@ -41,7 +41,7 @@
         </div>
 
         <div class="producto-chocolate">
-            <img class="images-row" src="images/fotoProducto3.jpg" alt="photos">
+            <img class="images-row" src="images/products/fotoProducto3.jpg" alt="photos">
             <article>Torta decorada Personalizada</article>
             <h3 class="h3-producto">$8.000</h3>
             <i class="fa-solid fa-basket-shopping"></i>
@@ -52,7 +52,7 @@
 
         <div class="producto-chocolate">
 
-            <a href="\descproducto"><img class="images-row" src="images/fotoProducto1.jpg" alt="photos"></a>
+            <a href="\descproducto"><img class="images-row" src="images/products/fotoProducto1.jpg" alt="photos"></a>
             <article>Mousse de Mix de Chocolates</article>
             <h3 class="h3-producto">$8.000</h3>
             <i class="fa-solid fa-basket-shopping"></i>
@@ -64,7 +64,7 @@
         </article>
 
         <div class="producto-chocolate">
-            <img class="images-row" src="images/fotoProducto2.jpg" alt="photos">
+            <img class="images-row" src="images/products/fotoProducto2.jpg" alt="photos">
             <article>Lemon Pie</article>
             <h3 class="h3-producto">$3.000</h3>
             <i class="fa-solid fa-basket-shopping"></i>
@@ -74,7 +74,7 @@
         </div>
 
         <div class="producto-chocolate">
-            <img class="images-row" src="images/fotoProducto13.jpg" alt="photos">
+            <img class="images-row" src="images/products/fotoProducto13.jpg" alt="photos">
             <article>Selva Negra</article>
             <h3 class="h3-producto">$4.000</h3>
             <i class="fa-solid fa-basket-shopping"></i>
@@ -84,7 +84,7 @@
         </div>
 
         <div class="producto-chocolate">
-            <img class="images-row" src="images/fotoProducto10.jpg" alt="photos">
+            <img class="images-row" src="images/products/fotoProducto10.jpg" alt="photos">
             <article>Torta de vainilla</article>
             <h3 class="h3-producto">$5.000</h3>
             <i class="fa-solid fa-basket-shopping"></i>
@@ -94,7 +94,7 @@
         </div>
 
         <div class="producto-chocolate">
-            <img class="images-row" src="images/fotoProducto5.jpg" alt="photos">
+            <img class="images-row" src="images/products/fotoProducto5.jpg" alt="photos">
             <article>Mousse de Frutos del Bosque</article>
             <h3 class="h3-producto">$5.000</h3>
             <i class="fa-solid fa-basket-shopping"></i>
@@ -104,7 +104,7 @@
         </div>
 
         <div class="producto-chocolate">
-            <img class="images-row" src="images/fotoProducto6.jpg" alt="photos">
+            <img class="images-row" src="images/products/fotoProducto6.jpg" alt="photos">
             <article>Macarones</article>
             <h3 class="h3-producto">$3.000</h3>
             <i class="fa-solid fa-basket-shopping"></i>
@@ -114,7 +114,7 @@
         </div>
 
         <div class="producto-chocolate">
-            <img class="images-row" src="images/fotoProducto7.jpg" alt="photos">
+            <img class="images-row" src="images/products/fotoProducto7.jpg" alt="photos">
             <article>Super Chocolate</article>
             <h3 class="h3-producto">$8.000</h3>
             <i class="fa-solid fa-basket-shopping"></i>
@@ -123,7 +123,7 @@
             </div>
         </div>
         <div class="producto-chocolate">
-            <img class="images-row" src="images/fotoProducto14.jpg" alt="photos">
+            <img class="images-row" src="images/products/fotoProducto14.jpg" alt="photos">
             <article>Tarta de frutillas</article>
             <h3 class="h3-producto">$5.000</h3>
             <i class="fa-solid fa-basket-shopping"></i>
