--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -21,7 +21,7 @@
 					<section class="product-box">
 						<a href="/products/detail/<%= product.id %>">
 							<figure class="product-box_image">
-								<img src="/images/products/<%= product.image %>" alt="imagen de producto">
+								<img src="/images/products/<%= product.image %>" alt="imagen de producto" width="100%">
 							</figure>
 							<article class="product-box_data">
 								<h2><%= product.name %></h2>
