--- a/src/views/productostortas.ejs
+++ b/src/views/productostortas.ejs
@@ -18,7 +18,7 @@
             <div class="botonera">
                 <input type="submit" value="Comprar">
             </div>
-        </div>aqAQA
+        </div>
 
         <div class="producto-chocolate">
             <img class="images-row" src="images/products/fotoProducto11.jpg" alt="photos">
