--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
-    <!-- <link rel="stylesheet" type="text/css" href="/css/app.css"> -->
+    <link rel="stylesheet" type="text/css" href="/css/app.css"> 
     <script src="https://kit.fontawesome.com/7f31ea2864.js" crossorigin="anonymous"></script>
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
