--- a/src/views/detail.ejs
+++ b/src/views/detail.ejs
@@ -2,7 +2,7 @@
 <html lang="es">
 <!-- Include Head -->
 <%- include('partials/head', {title: '¿?'}) %>
-<body>
+<body class= "prod">
 	<!-- Header -->
 	<%- include('partials/header') %>
 	<!-- /Header -->
