--- a/src/views/product-edit-form.ejs
+++ b/src/views/product-edit-form.ejs
@@ -10,7 +10,7 @@
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">Estás editando: <i>PRODUCT NAME</i></h2>
+				<h2 class="products-title">Estás editando: <i><%= productToEdit.name %></i></h2>
 			</div>
 		</div>
 		<div class="col-12">
@@ -32,8 +32,8 @@
 						<label for="category" class="form-label">Categoría:</label>
 						<select name="category" id="category" class="form-input">
 							<option value="">Elegí</option>
-							<option value="in-sale">En oferta</option>
-							<option value="visited" >Últimos agregados</option>
+							<option value="bombon">Chocolate</option>
+							<option value="torta" >Pasteleria</option>
 						</select>
 					</div>
 					<div class="col-12">
