--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
     <%- include('partials/head.ejs') %>
     <%- include('partials/header.ejs') %>
