--- a/src/views/product-create-form.ejs
+++ b/src/views/product-create-form.ejs
@@ -32,8 +32,8 @@
 						<label for="category" class="form-label">Categoría:</label>
 						<select name="category" id="category" class="form-input">
 							<option value="">Elegí</option>
-							<option value="in-sale">En oferta</option>
-							<option value="visited">Últimos agregados</option>
+							<option value="bombon">Chocolate</option>
+							<option value="torta">Pasteleria</option>
 						</select>
 					</div>
 					<div class="col-12">
