--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -3,7 +3,7 @@
 
   <%- include('partials/head.ejs') %>
   <%- include('partials/header.ejs') %>
-<body>
+  <body class="prod">
 
   <center>
     <h3>mis compras</h3>
