--- a/src/views/compras.ejs
+++ b/src/views/compras.ejs
@@ -3,7 +3,7 @@
 
     <%- include('partials/head.ejs') %>
     <%- include('partials/header.ejs') %>
-<body>
+<body class="prod">
 
     <h3>Mis Compras</h3>
 
