--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -3,19 +3,19 @@
 
     <%- include('partials/head.ejs') %>
     <%- include('partials/header.ejs') %>
-<body>
+    <body class="prod">
 
     <h3>Inicio</h3><br><br>
 
     <div class="fotoalmedio">
-        <a href="productostortas.ejs"><img text-align="center" src="/images/products/fotoProductoPagInicio.jpeg" alt="" height="75%"
+        <a href="index"><img text-align="center" src="/images/products/fotoProductoPagInicio.jpeg" alt="" height="75%"
             width="75%"></a>
     </div>
     <br>
     <div class="fotoalmedio">
         <h2 text-align="center">¿Que te tentó?</h2>
         <br>
-        <a href="products"><img text-align="center" src="/images/products/P1110019.jpg" alt="" height="50%" width="50%"></a>
+        <a href="index"><img text-align="center" src="/images/products/P1110019.jpg" alt="" height="30%" width="30%"></a>
     </div>
 </body>
 
