--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -4,7 +4,7 @@
     <%- include('partials/head.ejs') %>
     <%- include('partials/header.ejs') %>
 
-<body>
+    <body class="prod">
 
     <h3>Ingresar</h3>
 
@@ -20,6 +20,17 @@
     </main>
 
 </body>
+<br>
+<br>
+<br><br><br>
+<br><br><br>
+<br><br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <%- include('partials/footer.ejs') %>
+
 
 </html>
