--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -2,7 +2,7 @@
 <html lang="es">
 <!-- Include Head -->
 <%- include('partials/head', {title: 'Todos los productos'}) %>
-<body>
+<body class="prod">
 	<!-- Header -->
 	<%- include('partials/header') %>
 	<!-- /Header -->
