--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -4,7 +4,7 @@
 <%- include('partials/head.ejs') %>
 <%- include('partials/header.ejs') %>
 
-<body>
+<body class="prod">
 
     <h3>Registro</h3>
 
