--- a/src/views/results.ejs
+++ b/src/views/results.ejs
@@ -2,7 +2,7 @@
 <html lang="es">
 <!-- Include Head -->
 <%- include('partials/head', {title: 'Resultados de tu búsqueda'}) %>
-<body>
+<body class="prod">
 	<!-- Header -->
 	<%- include('partials/header') %>
 	<!-- /Header -->
