--- a/src/views/product-edit-form.ejs
+++ b/src/views/product-edit-form.ejs
@@ -2,7 +2,7 @@
 <html lang="es">
 <!-- Include Head -->
 <%- include('partials/head', {title: 'Editando: ' + '¿?'}) %>
-<body>
+<body class = "prod">
 	<!-- Header -->
 	<%- include('partials/header') %>
 	<!-- /Header -->
