--- a/src/views/productostortas.ejs
+++ b/src/views/productostortas.ejs
@@ -135,6 +135,45 @@
     </div>
 
     </div>
+
+    <!DOCTYPE html>
+    <html lang="es">
+    
+    <%- include('partials/head', {title: 'Todos los productos'}) %>
+    <%- include('partials/header') %>
+    <br>
+    <section class="container-fluid">
+      <h1 class="titulo" >Que buenas Hondas</h1>
+    </section>
+    <section class="productos">
+      
+        <% for(let i= 0; i < products.length; i++){ %>
+        
+                <% if (products[i].category == torta) { %>
+                <% } %>
+              <section class="detalle">
+                <h5 class="card-title"><%= products[i].name%></h5>
+                <h5 class="card-title" >$  <%= products[i].price%> </h5>
+                <p class="card-text descripcion"><%= products[i].description%> </p>
+                <a href="#" class="btn btn-primary">Ver detalle</a>
+              </section>
+        
+            </article>        
+          
+        <% } %>
+      
+    </section>
+    <%- include('partials/footer') %>
+    
+    </body>	
+    </html>
+
+
+
+
+
+
+
 </body>
 <%- include('partials/footer.ejs') %>
 
