--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,7 +11,7 @@
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">TORTAS</h2>
+				<h2 class="products-title">PASTELERIA</h2>
 			</div>
 			<!-- Show the "visited" products -->
 			<% torta.forEach(function(product){ 
@@ -65,6 +65,8 @@
 				<% }) %>
 				</div>
 			</div>
+
+
 			<!-- /Ofertas -->
 			
 			<!-- footer -->
