--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,7 +3,7 @@
         <a href="/">Inicio</a>
         <a href="/registro">Registrate</a>
         <a href="/login">Acceder</a>
-        <a href="/products">Chocolates</a>
+        <a href="/productos">Chocolates</a>
         <a href="/products">Pasteleria</a>
         <a href="/compras">Mis Compras</a>
         <a href="/carrito"><i class="fa-solid fa-cart-shopping"></i></a>
