levnate la pag producto para probar el condicional

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -250,7 +250,7 @@ hr {
 
 
 /*====== Footer ======*/
-.main-footer {
+/*.main-footer {
   background-color: #b88b5c;
   padding: 20px 0;
   margin-top: 80px;
