--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -12,7 +12,7 @@
         <p class="footer2">Politica de calidad</p>
         <p class="footer2">Bases y condiciones</p>
         <p class="footer2">Preguntas frecuentes</p>
-        <a href = "/adminproduc"><p class="powered">powered by grupo 7</p></a>
+        <p class="powered">powered by grupo 7</p>
     </section>
 </footer>
 
