--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -6,13 +6,22 @@
   <body class="prod">
 
   <center>
-    <h3>mis compras</h3>
+    <h3>Mis compras</h3>
+    
   </center>
+  <style>
+    h3 {
+			font-size: 45px;
+      font-family: "Monserrat"; 
+      color: white;
+      text-decoration: underline solid 2px white;
+      }
+    </style>
   <br><br><br><br>
 
   <center><img primerafoto text-align="center"
       src="/images/products/chocolate-shopping-trolley-red-background-14-february-sale-creative-minimal-concept_126267-7192.jpg"
-      alt="" height="30%" width="30%"></center>
+      alt="" height="50%" width="50%"></center>
   <br><br><br><br>
   <div class="container-miscompras">
     <table class="tablas-compras">
