--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -6,16 +6,24 @@
     <body class="prod">
 
     <h3>Inicio</h3><br><br>
+    <style>
+        h3 {
+                font-size: 45px;
+          font-family: "Monserrat"; 
+          color: white;
+          text-decoration: underline solid 2px white;
+          }
+        </style>
 
     <div class="fotoalmedio">
-        <a href="index"><img text-align="center" src="/images/products/fotoProductoPagInicio.jpeg" alt="" height="75%"
-            width="75%"></a>
+        <a href="index"><img text-align="center" src="/images/products/fotoProductoPagInicio.jpeg" alt="" height="95%"
+            width="95%"></a>
     </div>
     <br>
     <div class="fotoalmedio">
         <h2 text-align="center">¿Que te tentó?</h2>
         <br>
-        <a href="index"><img text-align="center" src="/images/products/P1110019.jpg" alt="" height="30%" width="30%"></a>
+        <a href="index"><img text-align="center" src="/images/products/P1110019.jpg" alt="" height="65%" width="65%"></a>
     </div>
 </body>
 
