--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -21,7 +21,7 @@
 					<section class="product-box">
 						<a href="/products/detail/<%= product.id %>">
 							<figure class="product-box_image">
-								<img src="/images/products/<%= product.image %>" alt="imagen de producto">
+								<img class= "img2" src="/images/products/<%= product.image %>" alt="imagen de producto">
 							</figure>
 							<article class="product-box_data">
 								<h2><%= toThousand(finalPrice) %></h2>
@@ -51,7 +51,7 @@
 						<section class="product-box">
 							<a href="/products/detail/<%= product.id %>">
 								<figure class="product-box_image">
-									<img src="/images/products/<%= product.image %>" alt="imagen de producto">
+									<img class= "img2" src="/images/products/<%= product.image %>" alt="imagen de producto">
 								</figure>
 								<article class="product-box_data">
 									<h2><%= toThousand(finalPrice) %></h2>
