--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -7,6 +7,14 @@
     <body class="prod">
 
     <h3>Ingresar</h3>
+    <style>
+        h3 {
+                font-size: 45px;
+          font-family: "Monserrat"; 
+          color: white;
+          text-decoration: underline solid 2px white;
+          }
+        </style>
 
     <main class="login">
         <div class="container-login">
