--- a/src/views/compras.ejs
+++ b/src/views/compras.ejs
@@ -6,6 +6,14 @@
 <body class="prod">
 
     <h3>Mis Compras</h3>
+    <style>
+        h3 {
+                font-size: 45px;
+          font-family: "Monserrat"; 
+          color: white;
+          text-decoration: underline solid 2px white;
+          }
+        </style>
 
     <main class="registercompras">
         <div class="container-miscompras">
