--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -23,7 +23,7 @@
     <div class="fotoalmedio">
         <h2 text-align="center">¿Que te tentó?</h2>
         <br>
-        <a href="index"><img text-align="center" src="/images/products/P1110019.jpg" alt="" height="65%" width="65%"></a>
+        <a href="productostortas"><img text-align="center" src="/images/products/P1110019.jpg" alt="" height="65%" width="65%"></a>
     </div>
 </body>
 
