--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -14,7 +14,7 @@
 				<h2 class="products-title">Todos los chocolates</h2>
 			</div>
 
-			<% products.forEach(function(product){ 
+			<% product.forEach(function(product){ 
 				let finalPrice = (product.price * ((100 - product.discount) / 100)).toFixed(0)
 			%>
 				<div class="col-12 col-sm-6 col-lg-3">
