--- a/src/views/productos/carrito.ejs
+++ b/src/views/productos/carrito.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <%- include('partials/head.ejs') %>
-  <%- include('partials/header.ejs') %>
+  <%- include('../partials/head.ejs') %>
+  <%- include('../partials/header.ejs') %>
   <body class="prod">
 
   <center>
@@ -74,6 +74,6 @@
   </center>
   </div>
 
-  <%- include('partials/footer.ejs') %>
+  <%- include('../partials/footer.ejs') %>
 
 </html>
