--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -16,14 +16,14 @@
         </style>
 
     <div class="fotoalmedio">
-        <a href="index"><img text-align="center" src="/images/products/fotoProductoPagInicio.jpeg" alt="" height="95%"
+        <a href="/productos/Pasteleria"><img text-align="center" src="/images/products/fotoProductoPagInicio.jpeg" alt="" height="95%"
             width="95%"></a>
     </div>
     <br>
     <div class="fotoalmedio">
-        <h2 text-align="center">¿Que te tentó?</h2>
+        <h2 text-align="center">¿Que te tentó? </h2><a href="index"><h2> PRODUCTOS</h2></a>
         <br>
-        <a href="productostortas"><img text-align="center" src="/images/products/P1110019.jpg" alt="" height="65%" width="65%"></a>
+        <a href="/productos/Chocolate"><img text-align="center" src="/images/products/P1110019.jpg" alt="" height="65%" width="65%"></a>
     </div>
 </body>
 
