--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -14,7 +14,7 @@
 				<h2 class="products-title">PASTELERIA</h2>
 			</div>
 			<!-- Show the "visited" products -->	
-			<% torta.forEach(function(product){ 
+			<% Pasteleria.forEach(function(product){ 
 				let finalPrice = (product.price * ((100 - product.discount) / 100)).toFixed(0)
 			%>
 				<div class="col-12 col-sm-6 col-lg-3">
@@ -44,7 +44,7 @@
 					<h2 class="products-title">CHOCOLATE</h2>
 				</div>
 				<!-- Show the "in-sale" products -->
-				<% bombon.forEach(function(product){ 
+				<% Chocolate.forEach(function(product){ 
 					let finalPrice = (product.price * ((100 - product.discount) / 100)).toFixed(0)
 				%>
 					<div class="col-12 col-sm-6 col-lg-3">
