--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,8 +3,8 @@
         <a href="/">Inicio</a>
         <a href="/registro">Registrate</a>
         <a href="/login">Acceder</a>
-        <a href="/products/bombon">Chocolates</a>
-        <a href="/products/torta">Pasteleria</a>
+        <a href="/productos/Chocolate">Chocolates</a>
+        <a href="/productos/Pasteleria">Pasteleria</a>
         <a href="/compras">Mis Compras</a>
         <a href="/carrito"><i class="fa-solid fa-cart-shopping"></i></a>
     </nav>
