--- a/src/views/productos/compras.ejs
+++ b/src/views/productos/compras.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <%- include('partials/head.ejs') %>
-    <%- include('partials/header.ejs') %>
+    <%- include('../partials/head.ejs') %>
+    <%- include('../partials/header.ejs') %>
 <body class="prod">
 
     <h3>Mis Compras</h3>
@@ -50,7 +50,7 @@
 
     </main>
 </body>
-<%- include('partials/footer.ejs') %>
+<%- include('../partials/footer.ejs') %>
 
 
 </html>
