--- a/src/views/productos/producto.ejs
+++ b/src/views/productos/producto.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<%- include('partials/head', {title: 'Todos los productos'}) %>
-<%- include('partials/header') %>
+    <%- include('../partials/head.ejs') %>
+    <%- include('../partials/header.ejs') %>
 <body class = prod>
 <main>
 <div>
@@ -35,6 +35,6 @@
 		</div>
 </div>
 </main>
-	<%- include('partials/footer') %>	
+<%- include('../partials/footer.ejs') %>
 </body>	
 </html>
