--- a/src/views/usuarios/login.ejs
+++ b/src/views/usuarios/login.ejs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <%- include('partials/head.ejs') %>
-    <%- include('partials/header.ejs') %>
+
+    <%- include('../partials/head.ejs') %>
+    <%- include('../partials/header.ejs') %>
 
     <body class="prod">
 
@@ -38,7 +39,7 @@
 <br>
 <br>
 <br>
-<%- include('partials/footer.ejs') %>
+<%- include('../partials/footer.ejs') %>
 
 
 </html>
