--- a/src/views/web/index.ejs
+++ b/src/views/web/index.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <!-- Include Head -->
-<%- include('partials/head', {title: 'Inicio'}) %>
+<%- include('../partials/head', {title: 'Inicio'}) %>
 <body class= "prod">
 	<!-- Header -->
-	<%- include('partials/header') %>
+	<%- include('../partials/header') %>
 	<!-- /Header -->
 
 	<!-- ultima visita -->
@@ -70,7 +70,7 @@
 			<!-- /Ofertas -->
 			
 			<!-- footer -->
-			<%- include('partials/footer') %>
+			<%- include('../partials/footer.ejs') %>
 			<!-- /footer -->
 		</body>	
 		</html>
