--- a/src/views/admin/product-create-form.ejs
+++ b/src/views/admin/product-create-form.ejs
@@ -51,7 +51,7 @@
 	<!-- /todos los productos -->
 
 	<!-- footer -->
-	<%- include('partials/footer') %>
+	<%- include('../partials/footer.ejs') %>
 	<!-- /footer -->
 </body>	
 </html>
