--- a/src/views/productos/detail.ejs
+++ b/src/views/productos/detail.ejs
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <!-- Include Head -->
-<%- include('partials/head', {title: '¿?'}) %>
+<%- include('../partials/head.ejs') %>
+
 <body class= "prod">
 	<!-- Header -->
-	<%- include('partials/header') %>
+	<%- include('../partials/header.ejs') %>
 	<!-- /Header -->
 
 	<!-- product detail -->
@@ -68,7 +69,7 @@
 	<!-- /product detail -->
 
 	<!-- footer -->
-	<%- include('partials/footer') %>
+	<%- include('../partials/footer.ejs') %>
 	<!-- /footer -->
 
 </body>	
