--- a/src/views/usuarios/registro.ejs
+++ b/src/views/usuarios/registro.ejs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%- include('partials/head.ejs') %>
-<%- include('partials/header.ejs') %>
+
+    <%- include('../partials/head.ejs') %>
+    <%- include('../partials/header.ejs') %>
 
 <body class="prod">
 
@@ -36,6 +37,6 @@
     </main>
 </body>
 
-<%- include('partials/footer.ejs') %>
+<%- include('../partials/footer.ejs') %>
 
 </html>
