--- a/src/views/web/home.ejs
+++ b/src/views/web/home.ejs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 
-    <%- include('partials/head.ejs') %>
-    <%- include('partials/header.ejs') %>
+
+    <%- include('../partials/head.ejs') %>
+    <%- include('../partials/header.ejs') %>
     <body class="prod">
 
     <h3>Inicio</h3><br><br>
@@ -27,6 +28,6 @@
     </div>
 </body>
 
-<%- include('partials/footer.ejs') %>
+<%- include('../partials/footer.ejs') %>
 
 </html>
