--- a/src/views/productos/detail.ejs
+++ b/src/views/productos/detail.ejs
@@ -3,11 +3,11 @@
 <!-- Include Head -->
 <%- include('../partials/head.ejs') %>
 
-<body class= "prod">
 	<!-- Header -->
 	<%- include('../partials/header.ejs') %>
 	<!-- /Header -->
 
+	<body class= "prod">
 	<!-- product detail -->
 	<div class="container products-wrapper">
 		<div class="row">
@@ -57,8 +57,8 @@
 						<a href="#" class="buy-now-button">COMPRAR AHORA</a>
 						<hr>
 
-						<a href="/products/edit/<%= product.id %>" class="action-button edit">EDITAR PRODUCTO</a>
-						<form action="/products/delete/<%= product.id %>?_method=DELETE" method="POST" style="display: inline-flex">
+						<a href="admin/edit/<%= product.id %>" class="action-button edit">EDITAR PRODUCTO</a>
+						<form action="/admin/delete/<%= product.id %>?_method=DELETE" method="POST" style="display: inline-flex">
 							<button type="submit" class="action-button delete">ELIMINAR</button>
 						</form>
 					</article>
