--- a/src/views/admin/product-edit-form.ejs
+++ b/src/views/admin/product-edit-form.ejs
@@ -14,7 +14,7 @@
 			</div>
 		</div>
 		<div class="col-12">
-			<form action="/products/edit/<%= productToEdit.id %>?_method=PATCH" method="POST">
+			<form action="C:\Users\Usuario\Desktop\digital\hibrido\src\views\admin\product-edit-form.ejs<%= productToEdit.id %>?_method=PATCH" method="POST">
 				<div class="row product-detail">
 					<div class="col-12 col-md-6">
 						<label for="name" class="form-label">Nombre del producto:</label>
