--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,12 +1,12 @@
 <header>
     <nav>
-        <a href="/web/">Inicio</a>
-        <a href="/usuarios/registro">Registrate</a>
-        <a href="/usuarios/login">Acceder</a>
+        <a href="/">Inicio</a>
+        <a href="/usuario/registro">Registrate</a>
+        <a href="/usuario/login">Acceder</a>
         <a href="/productos/Chocolate">Chocolates</a>
         <a href="/productos/Pasteleria">Pasteleria</a>
-        <a href="/productos/compras">Mis Compras</a>
-        <a href="/productos/carrito"><i class="fa-solid fa-cart-shopping"></i></a>
+        <a href="../productos/compras">Mis Compras</a>
+        <a href="../productos/carrito"><i class="fa-solid fa-cart-shopping"></i></a>
     </nav>
     <section class="textos-header">
         <h1>tentó</h1>
