--- a/src/views/productos/results.ejs
+++ b/src/views/productos/results.ejs
@@ -24,7 +24,7 @@
 					%>
 					<div class="col-12 col-sm-6 col-lg-3">
 						<section class="product-box">
-							<a href="/products/detail/<%= `${product.id}/` %>">
+							<a href="/productos/detail/<%= `${product.id}/` %>">
 								<figure class="product-box_image">
 									<img src="/images/products/<%= product.image %>" alt="imagen de producto">
 								</figure>
