--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,8 +5,8 @@
         <a href="/usuario/login">Acceder</a>
         <a href="/productos/Chocolate">Chocolates</a>
         <a href="/productos/Pasteleria">Pasteleria</a>
-        <a href="../productos/compras">Mis Compras</a>
-        <a href="../productos/carrito"><i class="fa-solid fa-cart-shopping"></i></a>
+        <a href="/productos/compras">Mis Compras</a>
+        <a href="/productos/carrito"><i class="fa-solid fa-cart-shopping"></i></a>
     </nav>
     <section class="textos-header">
         <h1>tentó</h1>
