--- a/src/views/admin/product-edit-form.ejs
+++ b/src/views/admin/product-edit-form.ejs
@@ -41,7 +41,7 @@
 						<textarea name="description" id="description" class="form-input"><%= productToEdit.description %></textarea>
 					</div>
 					<div class="col-12">
-						<button type="submit" class="buy-now-button">Guardar producto</button>
+						<a href= "../"><button type="submit" class="buy-now-button">Guardar producto</button></a>
 					</div>
 				</div>
 			</form>
