--- a/src/views/admin/product-create-form.ejs
+++ b/src/views/admin/product-create-form.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <!-- Include Head -->
-<%- include('partials/head', {title: 'Formulario de creación'}) %>
+<%- include('..partials/head', {title: 'Formulario de creación'}) %>
 <body>
 	<!-- Header -->
-	<%- include('partials/header') %>
+	<%- include('..partials/header') %>
 	<!-- /Header -->
 
 	<div class="container products-wrapper">
@@ -51,7 +51,7 @@
 	<!-- /todos los productos -->
 
 	<!-- footer -->
-	<%- include('../partials/footer.ejs') %>
+	<%-..include('../partials/footer.ejs') %>
 	<!-- /footer -->
 </body>	
 </html>
