--- a/src/views/productos/producto.ejs
+++ b/src/views/productos/producto.ejs
@@ -17,7 +17,7 @@
 			%>
 				<div class="col-12 col-sm-6 col-lg-3">
 					<section class="product-box">
-						<a href="/productos/detail/<%= product.id %>">
+						<a href="../admin/detail/<%= product.id %>">
 							<figure class="product-box_image">
 								<img class= "img2" src="/images/products/<%= product.image %>" alt="imagen de producto">
 							</figure>
