--- a/src/views/web/home.ejs
+++ b/src/views/web/home.ejs
@@ -22,7 +22,7 @@
     </div>
     <br>
     <div class="fotoalmedio">
-        <h2 text-align="center">¿Que te tentó? </h2><a href="index"><h2> PRODUCTOS</h2></a>
+        <h2 text-align="center">¿Que te tentó? </h2><a href="index"><h2> TODOS LOS PRODUCTOS</h2></a>
         <br>
         <a href="/productos/Chocolate"><img text-align="center" src="/images/products/P1110019.jpg" alt="" height="65%" width="65%"></a>
     </div>
