--- a/src/views/web/home.ejs
+++ b/src/views/web/home.ejs
@@ -17,9 +17,23 @@
         </style>
 
     <div class="fotoalmedio">
-        <a href="/productos/Pasteleria"><img text-align="center" src="/images/products/fotoProductoPagInicio.jpeg" alt="" height="95%"
-            width="95%"></a>
+        <a href="/productos/Pasteleria"><img text-align="center" src="/images/products/fotoProductoPagInicio.jpeg" alt="" height="95%" width="95%"></a>
     </div>
+
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="/images/products/fotoProductoPagInicio.jpeg" class="d-block w-100" alt="..." width="20%">
+          </div>
+          <div class="carousel-item">
+            <img src="/images/products/P1110019.jpg" class="d-block w-100" alt="..." width="20%">
+          </div>
+          <div class="carousel-item">
+            <img src="/images/products/fotoProductoPagInicio.jpeg" class="d-block w-100" alt="..." width="20%">
+          </div>
+        </div>
+      </div>
+
     <br>
     <div class="fotoalmedio">
         <h2 text-align="center">¿Que te tentó? </h2><a href="index"><h2> TODOS LOS PRODUCTOS</h2></a>
