hamburguejas al vapor

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -7,6 +7,25 @@
         <a href="/productos/Pasteleria">Pasteleria</a>
         <a href="/compras">Mis Compras</a>
         <a href="/carrito"><i class="fa-solid fa-cart-shopping"></i></a>
+
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+              <button class="navbar-toggler ms-auto" type="button" data-mdb-toggle="collapse"
+                data-mdb-target="#navbarToggleExternalContent3" aria-controls="navbarToggleExternalContent3"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-bars"></i>
+              </button>
+            </div>
+          </nav>
+          <div class="collapse" id="navbarToggleExternalContent3">
+            <div class="bg-light shadow-3 p-4">
+              <button class="btn btn-link btn-block border-bottom m-0">Link 1</button>
+              <button class="btn btn-link btn-block border-bottom m-0">Link 2</button>
+              <button class="btn btn-link btn-block m-0">Link 3</button>
+            </div>
+          </div>
+
+
     </nav>
     <section class="textos-header">
         <h1>tentó</h1>
@@ -16,5 +35,11 @@
             <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
                 style="stroke: none; fill: #d0ab7a;"></path>
         </svg></div>
+
+
+
+
+
+        
 
 </header>
