--- a/src/views/web/home.ejs
+++ b/src/views/web/home.ejs
@@ -20,25 +20,35 @@
         <a href="/productos/Pasteleria"><img text-align="center" src="/images/products/fotoProductoPagInicio.jpeg" alt="" height="95%" width="95%"></a>
     </div>
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="/images/products/fotoProductoPagInicio.jpeg" class="d-block w-100" alt="..." width="50px">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/products/P1110019.jpg" class="d-block w-100" alt="..." width="50px">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/products/fotoProductoPagInicio.jpeg" class="d-block w-100" alt="..." width="50px">
-          </div>
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div class="carousel-inner">
+    <div class="fotoalmedio"> 
+        <div class="carousel-item active">
+          <a href="/productos/Pasteleria"><img text-align="center" src="/images/products/fotoProductoPagInicio.jpeg" alt=""  width="95%"></a>
         </div>
+        <div class="carousel-item">
+          <a href="/productos/Chocolate"><img text-align="center" src="/images/products/P1110019.jpg" alt="" width="95%"></a>
+        </div>
+    </div>
+        
       </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+    
 
     <br>
     <div class="fotoalmedio">
         <h2 text-align="center">¿Que te tentó? </h2><a href="index"><h2> TODOS LOS PRODUCTOS</h2></a>
         <br>
-        <a href="/productos/Chocolate"><img text-align="center" src="/images/products/P1110019.jpg" alt="" height="60%" width="60%"></a>
+        <a href="/productos/Chocolate"><img text-align="center" src="/images/products/P1110019.jpg" alt="" height="75%" width="75%"></a>
     </div>
 </body>
 
