--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -8,22 +8,15 @@
         <a href="/compras">Mis Compras</a>
         <a href="/carrito"><i class="fa-solid fa-cart-shopping"></i></a>
 
-        <nav class="navbar navbar-light bg-light">
-            <div class="container-fluid">
-              <button class="navbar-toggler ms-auto" type="button" data-mdb-toggle="collapse"
-                data-mdb-target="#navbarToggleExternalContent3" aria-controls="navbarToggleExternalContent3"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fas fa-bars"></i>
-              </button>
-            </div>
-          </nav>
-          <div class="collapse" id="navbarToggleExternalContent3">
-            <div class="bg-light shadow-3 p-4">
-              <button class="btn btn-link btn-block border-bottom m-0">Link 1</button>
-              <button class="btn btn-link btn-block border-bottom m-0">Link 2</button>
-              <button class="btn btn-link btn-block m-0">Link 3</button>
-            </div>
+        <nav class="navbar navbar-expand-lg bg-light fixed-top">
+          <a class="navbar-brand" href="#">Offcanvas navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="offcanvas offcanvas-end" tabindex="-1" id="navbarOffcanvasLg" aria-labelledby="navbarOffcanvasLgLabel">
+            ...
           </div>
+        </nav>
 
 
     </nav>
