--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -6,9 +6,10 @@
         <a href="/productos/Chocolate">Chocolates</a>
         <a href="/productos/Pasteleria">Pasteleria</a>
         <a href="/compras">Mis Compras</a>
+        <a href="admin/administrar">Administrar</a>
         <a href="/carrito"><i class="fa-solid fa-cart-shopping"></i></a>
 
-        <nav class="navbar navbar-expand-lg bg-light fixed-top">
+        <nav class="navbar navbar-expand-lg bg-light fixed-top" >
           <a class="navbar-brand" href="#">Offcanvas navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg">
             <span class="navbar-toggler-icon"></span>
