--- a/src/views/admin/administrar.ejs
+++ b/src/views/admin/administrar.ejs
@@ -8,6 +8,9 @@
 	<!-- /Header -->
 
 	<!-- ultima visita -->
+    <div>
+        <a href="/admin/create" class="action-button edit">CREAR PRODUCTO</a>
+    </div>
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
