--- a/src/views/web/home.ejs
+++ b/src/views/web/home.ejs
@@ -24,12 +24,24 @@
       <div class="carousel-inner">
     <div class="fotoalmedio"> 
         <div class="carousel-item active">
-          <a href="/productos/Pasteleria"><img text-align="center" src="/images/products/fotoProductoPagInicio.jpeg" alt=""  width="95%"></a>
+          <a href="/productos/Pasteleria"><img text-align="center" src="/images/products/fotoProductoPagInicio.jpeg" alt=""  width="65%"></a>
         </div>
         <div class="carousel-item">
-          <a href="/productos/Chocolate"><img text-align="center" src="/images/products/P1110019.jpg" alt="" width="95%"></a>
+          <a href="/productos/Chocolate"><video
+            src="/images/products/production ID_4458593 (1).mp4"
+            autoplay="true"
+            muted="true"
+            loop="true"
+            poster=""
+            width="70%"
+            height="300%"
+            ></video></a>
+          </div>
+        <div class="carousel-item">
+          <a href="/productos/Chocolate"><img text-align="center" src="/images/products/P1110019.jpg" alt="" width="65%"></a>
         </div>
-    </div>
+        
+    
         
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
