solapa crear no linkea el formulario

--- a/src/views/web/home.ejs
+++ b/src/views/web/home.ejs
@@ -17,7 +17,7 @@
         </style>
 
 <div class="fotoalmedio">
-  <h2 text-align="center">¿Que te tentó? </h2><a href="index"><h2> TODOS LOS PRODUCTOS</h2></a>
+  <a href="index"><h2> TODOS LOS PRODUCTOS</h2></a>
   <br>
 
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
