--- a/src/views/admin/administrar.ejs
+++ b/src/views/admin/administrar.ejs
@@ -9,7 +9,7 @@
 
 	<!-- ultima visita -->
     <div>
-        <a href="../crear" class="action-button edit">CREAR PRODUCTO</a>
+        <a href="/admin/crear" class="action-button edit">CREAR PRODUCTO</a>
     </div>
 	<div class="container products-wrapper">
 		<div class="row">
