--- a/src/views/admin/crear.ejs
+++ b/src/views/admin/crear.ejs
@@ -14,7 +14,7 @@
 			</div>
 		</div>
 		<div class="col-12">
-			<form action="/productos" method="POST">
+			<form action="/" method="POST" enctype="multipart/form-data">
 				<div class="row product-detail">
 					<div class="col-12 col-md-6">
 						<label for="name" class="form-label">Nombre del producto:</label>
@@ -42,6 +42,7 @@
 					</div>
 					<div class="col-12">
 						<button type="submit" class="buy-now-button">Guardar producto</button>
+						<a href="/admin/administrar" class="btn btn-danger">Volver</a>
 					</div>
 				</div>
 			</form>
