--- a/src/views/usuario/registro.ejs
+++ b/src/views/usuario/registro.ejs
@@ -20,7 +20,7 @@
 
     <main class="register">
         <div class="container-registro">
-            <form action="/registro" method="POST" enctype="multipart/form-data">
+            <form action="./registro" method="POST" enctype="multipart/form-data">
                 <input type="text" name="name" placeholder="Nombre ">
                 <input type="text" name="last_name" placeholder="Apellido">
                 <input type="email" name="email" placeholder="E-mail">
