--- a/src/views/admin/crear.ejs
+++ b/src/views/admin/crear.ejs
@@ -16,6 +16,10 @@
 		<div class="col-12">
 			<form action="/admin/crear" method="POST" enctype="multipart/form-data">
 				<div class="row product-detail">
+					<div>
+					<input type="file" name="imagen" >
+					</div>
+					
 					<div class="col-12 col-md-6">
 						<label for="name" class="form-label">Nombre del producto:</label>
 						<input type="text" id="name" name="name" placeholder="Ej: Torta among us" class="form-input">
