--- a/src/views/usuario/registro.ejs
+++ b/src/views/usuario/registro.ejs
@@ -2,40 +2,41 @@
 <html lang="en">
 
 
-    <%- include('../partials/head.ejs') %>
+<%- include('../partials/head.ejs') %>
     <%- include('../partials/header.ejs') %>
 
-<body class="prod">
+        <body class="prod">
 
-    <h3>Registro</h3>
-    <style>
-        h3 {
-                font-size: 45px;
-          font-family: "Monserrat"; 
-          color: white;
-          text-decoration: underline solid 2px white;
-          }
-        </style>
+            <h3>Registro</h3>
+            <style>
+                h3 {
+                    font-size: 45px;
+                    font-family: "Monserrat";
+                    color: white;
+                    text-decoration: underline solid 2px white;
+                }
+            </style>
 
 
-    <main class="register">
-        <div class="container-registro">
-            <form action="./registro" method="POST" enctype="multipart/form-data">
-                <input type="text" name="name" placeholder="Nombre ">
-                <input type="text" name="last_name" placeholder="Apellido">
-                <input type="email" name="email" placeholder="E-mail">
-                <input type="password" name="contraseña" placeholder="Contraseña">
-                <input type="password" name="confirmar Contraseña" placeholder="Confirmar Contraseña"> 
-              <div class="botonera">
-                    <input type="submit" value="Enviar">
-                    <input type="reset" value="Borrar">
+            <main class="register">
+                <div class="container-registro">
+                    <form action="./registro" method="POST" >
+                        
+                        <input type="text" name="name" placeholder="Nombre ">
+                        <input type="text" name="last_name" placeholder="Apellido">
+                        <input type="email" name="email" placeholder="E-mail">
+                        <input type="password" name="password" placeholder="Contraseña">
+                        
+                        <div class="botonera">
+                            <input type="submit" value="Enviar">
+                            <input type="reset" value="Borrar">
+                        </div>
+                    </form>
                 </div>
-            </form>
-        </div>
-        <br>
-    </main>
-</body>
+                <br>
+            </main>
+        </body>
 
-<%- include('../partials/footer.ejs') %>
+        <%- include('../partials/footer.ejs') %>
 
 </html>
